Added styling to allauth templates, started view to display users profile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -435,3 +435,13 @@ select:invalid,
 select option[value=""] {
     color: #aab7c4 !important;
 }
+
+/*--Allauth forms ---------*/
+
+.allauth-form-inner-content input{
+    border-color: var(--off-black);
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: var(--ivory);
+}
