--- a/members/templates/members/profile.html
+++ b/members/templates/members/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'members/css/profile.css' %}"
+    <link rel="stylesheet" href="{% static 'members/css/profile.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -20,7 +20,8 @@
         <div class="row">
             <div class="col mt-2">
                 <h1 class="gold-special-txt text-center mb-3">Member Profile</h1> 
-            </div>      
+            </div>
+            {{ profile }}      
         </div>                         
     </div> <!--close main container-->
 {% endblock %}
