--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,12 +4,12 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block inner_content %}
+    <h2 class="gold-txt text-center">{% trans "Change Password" %}</h2>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    <form method="POST" action="{% url 'account_change_password' %}" class="password_change mt-4">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        {{ form|crispy }}
+        <button class="btn-gold-outline" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
