--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -5,18 +5,18 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+    <h2 class="gold-txt text-center">{% trans "Password Reset" %}</h2>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p class="mt-4">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <input type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
