--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -3,17 +3,17 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block inner_content %}
+    <h2 class="gold-txt text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        <p class="mt-4">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a class="gold-txt gold-accent-txt" href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy }}
                 <input type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
