--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -4,8 +4,8 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+{% block inner_content %}
+<h2 class="gold-txt text-center">{% trans "Sign Up Closed" %}</h2>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<p class="mt-4">{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
