--- a/members/templates/members/profile.html
+++ b/members/templates/members/profile.html
@@ -21,7 +21,24 @@
             <div class="col mt-2">
                 <h1 class="gold-special-txt text-center mb-3">Member Profile</h1> 
             </div>
-            {{ profile }}      
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h4>Address</h4>
+                    <form class="mt-4" action="{% url 'profile' %}" method="POST" id="member-profile-form">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class="btn btn-gold-outline">Update</button>
+                    </form>
+                </div>
+                <div class="col-12 col-md-6">
+                    {% for order in orders %}
+                        <div class="d-flex flex-row">
+                            <p class="col-3 text-end">Subscription Tier:</p>
+                            <p class="col-9 text-start ps-2">{{ order.subscription_plan | upper }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>                         
     </div> <!--close main container-->
 {% endblock %}
