--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -84,7 +84,8 @@
                                     {% if request.user.is_authenticated %}
                                         <ul class="list-inline list-unstyled d-flex justify-content-evenly align-items-baseline">
                                             <li class="list-inline-item w-20 pb-0 ">
-                                                <!--Reminder - once profiles created add JS to toggle display of favourite / remove favourite button-->
+
+                                                <!--Outstanding : Functionality relating to favourites and Add to Rack have not been completed  - please refer to README -->
                                                 
                                                 <!--option A : Add Favourite -->
                                                 <btn type="button" class="btn btn-sm btn-add-fav align-baseline">
@@ -100,7 +101,6 @@
                                             </li>
 
                                             <li class="list-inline-item w-20 pb-0 align-baseline">
-                                                <!--REMINDER - once profile complete switch between add / remove icon-->
 
                                                 <!--option A : Add to Rack -->
                                                 <btn type="button" class="btn btn-sm btn-take align-baseline">
