--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -101,7 +101,9 @@
                                 <div class="card-footer text-muted">
                                     <ul class="list-inline list-unstyled d-flex justify-content-evenly align-items-baseline">
                                         <li class="list-inline-item w-20 pb-0 ">
-                                            <!--Reminder - once profiles created add JS to toggle display of favourite / remove favourite button-->
+                                            
+                                            <!--Outstanding : Functionality relating to favourites and Add to Rack have not been completed  - please refer to README -->
+
                                             
                                             <!--option A : Add Favourite -->
                                             <btn type="button" class="btn btn-sm btn-add-fav align-baseline">
@@ -117,11 +119,10 @@
                                         </li>
 
                                         <li class="list-inline-item w-20 pb-0 align-baseline">
-                                            <!--REMINDER - once profile complete switch between add / remove icon-->
+                                            
 
                                             <!--option A : Add to Rack -->
                                             <btn type="button" class="btn btn-sm btn-take align-baseline">
-                                                <!--Temporary image src to be updated with correct Media links-->
                                                 <img src="{{ MEDIA_URL }}Guitar_gold_add.svg" class="guitar-svg add-gold">
                                                 <img src="{{ MEDIA_URL }}Guitar_black_add.svg" class="guitar-svg add-black">
                                                 <p class=""><small>Add to Rack</small></p>
@@ -129,7 +130,6 @@
 
                                             <!--option B : Remove from Rack -->
                                             <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
-                                                <!--Temporary image src to be updated with correct Media links-->
                                                 <img src="{{ MEDIA_URL }}Guitar_gold_remove.svg" class="guitar-svg add-gold">
                                                 <img src="{{ MEDIA_URL }}Guitar_black_remove.svg" class="guitar-svg add-black">
                                                 <p class="ps-2"><small>Remove from Rack</small></p>
