--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,141 +13,144 @@
 
 {% block content %}
     <div class="container h-100">
+        <div class="col-12">
+            <!--Welcome banner and links to subscription plans and Guitar Vault-->
 
-        <!--Welcome banner and links to subscription plans and Guitar Vault-->
-
-        <div class="row">
-            <div class="col main-content mt-1">
-                <h1 class="gold-special-txt my-4">Welcome to the Guitar Vault</h1>
-                <div class="d-flex justify-content-evenly pb-2">
-                    <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline">New? View our subscription plans</a>
-                    <a href="{% url 'guitars' %}" class="btn btn-lg btn-gold-outline">Take a peek inside the vault!</a>
-                </div>
-            </div>      
-        </div>          <!--Close Welcome row-->
-
-        <!--Featured Row -->
-
-        <div class="row">
-            <div class="col-12 main-content mt-2">
-                <h1 class="gold-special-txt my-4">Featured Guitars</h1>
-                <div class="row">
-                    <div class="d-none d-md-block col-md-4">
-                        <div id="featured-carousel1" class="carousel slide" data-bs-touch="false" data-bs-ride="carousel">
-                            <div class="carousel-inner py-2">
-                                {% for guitar in guitars %}
-                                    {% if guitar.featured %}
-                                        <!-- BUG: guitar.id hard-coded to apply 'active' class to first instance. See README Bugs for more details -->
-                                        {% if guitar.id == 3 %}
-                                            <div class="carousel-item active">
-                                        {% else %}
-                                            <div class="carousel-item">
-                                        {% endif %}
-                                                <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
-                                                    <img src="{{ guitar.image_id.url }}" class="ms-auto rounded d-block me-0" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
-                                                </a>
-                                            </div> <!--close carousel item-->
-                                    {% endif %}
-                                {% endfor %}
-                            </div>  <!--close carousel 1 inner -->
-                        </div>      <!--close carousel 1 -->
+            <div class="row">
+                <div class="col main-content mt-1">
+                    <h1 class="gold-special-txt my-4">Welcome to the Guitar Vault</h1>
+                    <div class="d-flex justify-content-evenly pb-2">
+                        <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline">New? View our subscription plans</a>
+                        <a href="{% url 'guitars' %}" class="btn btn-lg btn-gold-outline">Take a peek inside the vault!</a>
                     </div>
+                </div>      
+            </div>          <!--Close Welcome row-->
 
-                    <div class="col-12 col-md-4">
-                        <div id="featured-carousel2" class="carousel slide" data-bs-touch="false" data-bs-ride="carousel">
-                            <div class="carousel-inner text-center py-2">
-                                {% for guitar in guitars %}
-                                    {% if guitar.featured %}
-                                        <!-- BUG: guitar.id hard-coded to apply 'active' class to first instance. See README Bugs for more details -->
-                                        {% if guitar.id == 5 %}
-                                            <div class="carousel-item active">
-                                        {% else %}
-                                            <div class="carousel-item">
-                                        {% endif %}
-                                                <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
-                                                    <img src="{{ guitar.image_id.url }}" class="mx-auto rounded d-block" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
-                                                </a>
-                                            </div> <!--close carousel item-->
-                                    {% endif %}
-                                {% endfor %}
-                            </div>  <!--close carousel 2 inner -->
-                        </div>      <!--close carousel 2 -->
-                    </div>
+            <!--Featured Row -->
 
-                    <div class="d-none d-md-block col-md-4">
-                        <div id="featured-carousel3" class="carousel slide" data-bs-touch="false" data-bs-ride="carousel">
-                            <div class="carousel-inner text-center py-2">
-                                {% for guitar in guitars %}
-                                    {% if guitar.featured %}
-                                        <!-- BUG: guitar.id hard-coded to apply 'active' class to first instance. See README Bugs for more details -->
-                                        {% if guitar.id == 6 %}
-                                            <div class="carousel-item active">
-                                        {% else %}
-                                            <div class="carousel-item">
-                                        {% endif %}
-                                                <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
-                                                    <img src="{{ guitar.image_id.url }}" class="rounded d-block" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
-                                                </a>
-                                            </div> <!--close carousel item-->
-                                    {% endif %}
-                                {% endfor %}
-                            </div>  <!--close carousel 3 inner -->
-                        </div>      <!--close carousel 3 -->
-                    </div>
-                </div>  
-            </div>      <!--close main content col -->
-        </div>          <!--close Featured row -->
-
-        
-        <!--Reminder to add urls for FAQ, Contact Us and Guitar Vault Explained -->
-
-        <div class="row">
-            <!-- About-->
-            <div class="col-12 col-md-guttered main-content my-2">
-                <div class="col-12">
-                    <h1 class="gold-special-txt my-4">About Guitar Vault</h1>
-                    <div class="row mb-4">
-                        <div class="col-12 col-md-6">
-                            <a href="" class="btn btn-lg btn-gold-outline w-100">Guitar Vault Explained</a>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline w-100">Our Subscription Plans</a>
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="col-12 main-content mt-2">
+                    <h1 class="gold-special-txt my-4">Featured Guitars</h1>
                     <div class="row">
-                        <div class="col-12 col-md-6">
-                            <a href="" class="btn btn-lg btn-gold-outline w-100">FAQ</a>
+                        <div class="d-none d-md-block col-md-4">
+                            <div id="featured-carousel1" class="carousel slide" data-bs-touch="false" data-bs-ride="carousel">
+                                <div class="carousel-inner py-2">
+                                    {% for guitar in guitars %}
+                                        {% if guitar.featured %}
+                                            <!-- BUG: guitar.id hard-coded to apply 'active' class to first instance. See README Bugs for more details -->
+                                            {% if guitar.id == 3 %}
+                                                <div class="carousel-item active">
+                                            {% else %}
+                                                <div class="carousel-item">
+                                            {% endif %}
+                                                    <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
+                                                        <img src="{{ guitar.image_id.url }}" class="ms-auto rounded d-block me-0" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
+                                                    </a>
+                                                </div> <!--close carousel item-->
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>  <!--close carousel 1 inner -->
+                            </div>      <!--close carousel 1 -->
                         </div>
-                        <div class="col-12 col-md-6">
-                            <a href="" class="btn btn-lg btn-gold-outline w-100">Contact Us</a>
+
+                        <div class="col-12 col-md-4">
+                            <div id="featured-carousel2" class="carousel slide" data-bs-touch="false" data-bs-ride="carousel">
+                                <div class="carousel-inner text-center py-2">
+                                    {% for guitar in guitars %}
+                                        {% if guitar.featured %}
+                                            <!-- BUG: guitar.id hard-coded to apply 'active' class to first instance. See README Bugs for more details -->
+                                            {% if guitar.id == 5 %}
+                                                <div class="carousel-item active">
+                                            {% else %}
+                                                <div class="carousel-item">
+                                            {% endif %}
+                                                    <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
+                                                        <img src="{{ guitar.image_id.url }}" class="mx-auto rounded d-block" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
+                                                    </a>
+                                                </div> <!--close carousel item-->
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>  <!--close carousel 2 inner -->
+                            </div>      <!--close carousel 2 -->
+                        </div>
+
+                        <div class="d-none d-md-block col-md-4">
+                            <div id="featured-carousel3" class="carousel slide" data-bs-touch="false" data-bs-ride="carousel">
+                                <div class="carousel-inner text-center py-2">
+                                    {% for guitar in guitars %}
+                                        {% if guitar.featured %}
+                                            <!-- BUG: guitar.id hard-coded to apply 'active' class to first instance. See README Bugs for more details -->
+                                            {% if guitar.id == 6 %}
+                                                <div class="carousel-item active">
+                                            {% else %}
+                                                <div class="carousel-item">
+                                            {% endif %}
+                                                    <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
+                                                        <img src="{{ guitar.image_id.url }}" class="rounded d-block" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
+                                                    </a>
+                                                </div> <!--close carousel item-->
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>  <!--close carousel 3 inner -->
+                            </div>      <!--close carousel 3 -->
+                        </div>
+                    </div>  
+                </div>      <!--close main content col -->
+            </div>          <!--close Featured row -->
+
+            
+            <!--Outstanding : Content for parts of this section has not been completed - please refer to README -->
+
+            <div class="row">
+                <!-- About-->
+                <div class="col-12 col-md-guttered main-content my-2">
+                    <div class="col-12">
+                        <h1 class="gold-special-txt my-4">About Guitar Vault</h1>
+                        <div class="row mb-4">
+                            <div class="col-12 col-md-6">
+                                <a href="" class="btn btn-lg btn-gold-outline w-100">Guitar Vault Explained</a>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline w-100">Our Subscription Plans</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <a href="" class="btn btn-lg btn-gold-outline w-100">FAQ</a>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <a href="" class="btn btn-lg btn-gold-outline w-100">Contact Us</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!--Empty column to force gutter - see bug fix in related CSS-->
-            <div class="d-none d-md-block col-md-gutter"></div>
+                <!--Empty column to force gutter - see bug fix in related CSS-->
+                <div class="d-none d-md-block col-md-gutter"></div>
 
-            <!--Users Poll-->
-            <div class="col-12 col-md-guttered main-content my-2">
-                <div class="col-12">
-                    {% if request.user.is_authenticated %}
-                        <h1 class="gold-special-txt my-4">How Are We Doing?</h1>
-                        <h4 class="gold-special-txt">We want your Feedback - please spare 5 minutes to complete this questionnaire and help shape the future of our service</h4>
-                    {% else %}
-                        <h1 class="gold-special-txt my-4">Members Feedback</h1>
-                        <!---JS cycles through a series of pre-written feedback comments and member names-->
-                        <div class=" gold-txt lg-txt d-flex">
-                            <p><i class="gold-txt fas fa-quote-left"></i>
-                            <span><em id="members-feedback" class="px-2"></em></span>
-                            <i class="gold-txt fas fa-quote-right align-self-end"></i>
-                            </p>
-                        </div>
-                        <p class="text-muted"> - <span id="member"></span></p>
-                        
-                    {% endif %}
+                <!--Users Poll-->
+                <!--Outstanding : Conent and functionality relating to feedback poll has not been completed  - please refer to README -->
+                <div class="col-12 col-md-guttered main-content my-2">
+                    <div class="col-12">
+                        {% if request.user.is_authenticated %}
+                            <h1 class="gold-special-txt my-4">How Are We Doing?</h1>
+                            <h4 class="gold-special-txt">* COMING SOON *</h4>
+                            <p class="gold-txt mt-4">We'll soon be conducting a brief survey to help shape the future of our service</h4>
+                        {% else %}
+                            <h1 class="gold-special-txt my-4">Members Feedback</h1>
+                            <!---JS cycles through a series of pre-written feedback comments and member names-->
+                            <div class=" gold-txt lg-txt d-flex">
+                                <p><i class="gold-txt fas fa-quote-left"></i>
+                                <span><em id="members-feedback" class="px-2"></em></span>
+                                <i class="gold-txt fas fa-quote-right align-self-end"></i>
+                                </p>
+                            </div>
+                            <p class="text-muted"> - <span id="member"></span></p>
+                            
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
+        </div> <!--close main central column-->           
     </div>
 {% endblock %}
