--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,10 +235,13 @@ body {
 .carousel-item img {
     object-position: center;
     object-fit: cover;
-    
     height:25vh;
 }
 
+.guitar-background-img {
+    margin-top:10vh;
+    background-size: cover;
+}
 
 /*----Guitar Card---------------------------------------------*/
 
