slight margin adjustment to index.html object

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -114,7 +114,7 @@
                                 <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline w-100">Our Subscription Plans</a>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row mb-4">
                             <div class="col-12 col-md-6">
                                 <a href="" class="btn btn-lg btn-gold-outline w-100">FAQ</a>
                             </div>
