files not saved / included in previous commit

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -160,144 +160,8 @@
         </div> <!--close main central column-->           
     </div>
   
-<!-- Modals -->
-    <div class="modal fade" id="gv-explained-Modal" tabindex="-1" aria-labelledby="gv-explainedModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-fullscreen">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title gold-txt text-center w-100" id="gv-explainedModalLabel">
-                        Guitar Vault Explained
-                    </h2>
-                    <button type="button" class="btn-close btn-gold-outline gold-txt" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="col-12 col-md-10 offset-md-1 text-center">
-                        <div class="lg-txt">
-                            <p>Guitar Vault is provided by guitarists for guitarists!</p>
-                            <p>Many guitarists suffer from Gear Acquisition Syndrome (GAS) - a strong desire to acquire more gear!</p>
-                            <p>But this causes severe bank balance harm and just where does it all go? And at the end of the day, do you really want to own all those instruments or is what you're really after is being able to inject some variation into the instruments you pick up?</p>
-                            <p>This is where Guitar Vault comes in. Members get to quell their GAS by receiving a different guitar every month!</p>
-                            <p class="d-none d-md-block">Wanted to see how an original Gibson Les Paul Standard really compares with a Modern? Perhaps you've always wanted to try out a new brand before making a purchase. OR you've invested heavily into electric guitars and fancy playing on an acoustic.</p>
-                            <p>Sign up today and you'll be able to find out for yourself. Just follow these steps;</p>
-                        </div>
-
-                        <div class="col-12 col-md-8 offset-md-2 modal-border py-2">
-                            <div class="d-flex flex-row col-12 mt-3">
-                                <p class="d-none d-md-block col-md-4 my-auto gold-txt lg-txt">STEP 1</p>
-                                <div class="col-12 col-md-8">
-                                    <div class="row">
-                                        <p class="col-12 gold-txt lg-txt">Head to our subscriptions to see our range of plans</p>
-                                    </div>
-                                    <div class="row">
-                                        <p class="col-12 text-muted">Our tiered plans provide access to higher value guitars in addition to other benefits</p>
-                                        <a href="{% url 'subscriptions' %}" class="btn btn-gold-outline w-50 mx-auto">View Our Subscription Plans
-                                        </a>
-                                    </div>
-                                </div>
-                                
-                            </div>
-                            
-                            <hr>
-
-                            <div class="d-flex flex-row col-12 mt-3">
-                                <p class="d-none d-md-block col-md-4 my-auto gold-txt lg-txt">STEP 2</p>
-                                <div class="col-12 col-md-8">
-                                    <div class="row">
-                                        <p class="col-12 gold-txt lg-txt">
-                                            Sign-up by selecting your plan and complete the sign-up and payment.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <hr>
-
-                            <div class="d-flex flex-row col-12 mt-3">
-                                <p class="d-none d-md-block col-md-4 my-auto gold-txt lg-txt">STEP 3</p>
-                                <div class="col-12 col-md-8">
-                                    <div class="row">
-                                        <p class="col-12 gold-txt lg-txt">
-                                            Browse through our available guitars and make your first choice!
-                                        </p>
-                                        <div class="row">
-                                            <a href="{% url 'guitars' %}" class="btn btn-gold-outline w-50 mx-auto">Take an early peek at the guitars now!
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="gv-FAQ-Modal" tabindex="-1" aria-labelledby="gv-FAQModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title text-center w-100" id="gv-FAQModalLabel">
-                        FAQ
-                    </h2>
-                    <button type="button" class="btn-close btn-gold-outline gold-txt" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="col-12 col-md-10 offset-md-1">
-                        <div class="row">
-                            <h4 class="gold-txt"> Q: Why do you offer different prices?</h4>
-                            <p>A: Our guitars are matched to the subscription tiers based on financial values. For example, we have to pay higher insurance / delivery insurance for more expensive items. It would not be fair to operate a single pricing model and pass these costs onto everyone. But to help soften the blow, we also provide some additional fantastic benefits for the upper tiers</p>
-                        </div>
-                        <div class="row">
-                            <h4 class="gold-txt"> Q: If I join at one tier can I loan guitars on a different tier?</h4>
-                            <p>A: At the moment we can only allow members to take a lower tiered guitar.</p>
-                        </div>
-                        <div class="row">
-                            <h4 class="gold-txt"> Q: If I take a lower tiered guitar will I be reimbursed?</h4>
-                            <p>A: At the end of 12 months, your total loans will be assessed. If you have a difference (i.e. plectrum tokens not used, or number used for lower tiered items) we will look at offering a discount for the next 12 months.</p>
-                        </div>
-                        <div class="row">
-                            <h4 class="gold-txt"> Q: Can I cancel?</h4>
-                            <p>A: You can request to change (upgrade / downgrade) or cancel at anytime. Note that if you request to cancel or downgrade and have a guitar currently loaned this will not be acted upon until the guitar has been returned.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="gv-contact-Modal" tabindex="-1" aria-labelledby="gv-contactModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title gold-txt text-center w-100" id="gv-contactModalLabel">
-                        Contact Us
-                    </h2>
-                    <button type="button" class="btn-close btn-gold-outline gold-txt" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="col-12 col-md-10 offset-md-1">
-                        <div class="row">
-                            <h4 class="gold-txt"> You can contact us at the following;</h4>
-                            <div class="d-flex flex-row col-8 mt-3">
-                                <p class="col-6 my-auto gold-txt">EMAIL</p>
-                                <p class="col-6">guitarvault@musician.org</p>
-                            </div>
-                            <div class="d-flex flex-row col-8 mt-3">
-                                <p class="col-6 my-auto gold-txt">PHONE</p>
-                                <p class="col-6">01234 567891</p>
-                            </div>
-                            <p class="text-muted">This site is for educational purposes and therefore contact details do not exist.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
 {% endblock %}
 
-
+{% block modals %}
+{% endblock %}
   
