--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -9,10 +9,10 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Guitar Vault Explained</a></li>
+                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#gv-explained-Modal">Guitar Vault Explained</a></li>
                 <li><a class="dropdown-item" href="{% url 'subscriptions' %}">Our Subscription Plans</a></li>
-                <li><a class="dropdown-item" href="#">FAQ</a></li>
-                <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#gv-FAQ-Modal">FAQ</a></li>
+                <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#gv-contact-Modal">Contact Us</a></li>
             </ul>
         </li>  <!--Close About Menu-->
 
